--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,6 @@
 body {
   height: 100vh;
+  margin-top:30px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,16 +8,17 @@ body {
   font-weight: 300;
   text-align: center;
   background: #3023ae;
-  background: -moz-linear-gradient(60deg, #3023ae 0%, #c86dd7 100%);
-  background: -webkit-linear-gradient(60deg, #3023ae 0%, #c86dd7 100%);
-  background: linear-gradient(60deg, #3023ae 0%, #c86dd7 100%);
+  background: -moz-linear-gradient(60deg, #526ba1 0%, #0f0ce7 100%);
+  background: -webkit-linear-gradient(60deg, #526ba1 0%, #0f0ce7 100%);
+  background: linear-gradient(60deg, #526ba1 0%, #0f0ce7 100%);
 }
 li {
-  padding: 15px;
-  margin: 10px;
+
+  margin: 3px;
   font-size: 1em;
   font-style: italic;
   border-bottom: 2px solid rgba(0,0,0, 0.2);
+  color: black;
 
 
 }
@@ -54,6 +56,8 @@ ul {
   color: #fff;
   font-size: 5em;
   text-shadow: 3px 5px #000;
+  margin-bottom: 2px;
+
 }
 .text-center {
   text-align: center;
@@ -74,12 +78,12 @@ ul {
 
 #modal {
   text-align: center;
-  margin: 10px;
-  padding: 10px;
+  margin: 8px;
+  padding: 8px;
   list-style:nome;
   background: #fff;
   border-radius: 10px;
-  box-shadow: 3px 4px 14px 0px rgba(0, 0, 0, 0.39);
+  box-shadow: 3px 4px 10px 0px rgba(0, 0, 0, 0.39);
 }
 
 #modal>h1 {
