--- a/src/styles.less
+++ b/src/styles.less
@@ -1,10 +1,10 @@
 body {
   height: 100vh;
-  margin-top:30px;
+  margin-top: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 300;
   text-align: center;
   background: #3023ae;
@@ -13,31 +13,27 @@ body {
   background: linear-gradient(60deg, #526ba1 0%, #0f0ce7 100%);
 }
 li {
-
   margin: 3px;
   font-size: 1em;
   font-style: italic;
-  border-bottom: 2px solid rgba(0,0,0, 0.2);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
   color: black;
-
-
 }
-li>button{
-  border:none;
+li > button {
+  border: none;
   background-color: #fff;
   font-size: 1em;
   float: right;
   opacity: 0.6;
   transition: opacity 1s;
 }
-li>button:hover{
+li > button:hover {
   opacity: 1;
   transition: opacity 1s;
 }
-button{
-  cursor:pointer;
+button {
+  cursor: pointer;
 }
-
 
 ul {
   text-align: left;
@@ -46,18 +42,16 @@ ul {
   list-style: none;
   background: #fff;
   border-radius: 10px;
-  -webkit-box-shadow: 3px 4px 14px 0px rgba(0,0,0,0.39);
-  -moz-box-shadow: 3px 4px 14px 0px rgba(0,0,0,0.39);
-  box-shadow: 3px 4px 24px 0px rgba(0,0,0,0.39);
-
+  -webkit-box-shadow: 3px 4px 14px 0px rgba(0, 0, 0, 0.39);
+  -moz-box-shadow: 3px 4px 14px 0px rgba(0, 0, 0, 0.39);
+  box-shadow: 3px 4px 24px 0px rgba(0, 0, 0, 0.39);
 }
-.title{
-  font-family: 'Dancing Script', cursive;
+.title {
+  font-family: "Dancing Script", cursive;
   color: #fff;
   font-size: 5em;
   text-shadow: 3px 5px #000;
   margin-bottom: 2px;
-
 }
 .text-center {
   text-align: center;
@@ -68,30 +62,29 @@ ul {
   border: none;
   padding: 20px;
   color: #fff;
-  border-radius:30px;
+  border-radius: 30px;
   font-size: 1em;
   font-weight: 100;
   padding-left: 50px;
   padding-right: 50px;
-
 }
 
 #modal {
   text-align: center;
   margin: 8px;
   padding: 8px;
-  list-style:nome;
+  list-style: nome;
   background: #fff;
   border-radius: 10px;
   box-shadow: 3px 4px 10px 0px rgba(0, 0, 0, 0.39);
 }
 
-#modal>h1 {
+#modal > h1 {
   font-weight: 300;
 }
 
 input {
-  width:100%;
+  width: 100%;
   line-height: 50px;
   text-indent: 10px;
   font-size: 1.2em;
@@ -102,5 +95,5 @@ input {
   color: #fff;
   font-weight: bold;
   padding: 5px;
-  margin-top:10px;
+  margin-top: 10px;
 }
