ajustando funcao facing

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -51,3 +51,11 @@ html {
     background-position-x: 390px;
   }
 }
+
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100;
+}
