--- a/src/styles.less
+++ b/src/styles.less
@@ -73,7 +73,8 @@ ul {
   text-align: center;
   margin: 8px;
   padding: 8px;
-  list-style: nome;
+  list-style: 600px;
+  width: auto;
   background: #fff;
   border-radius: 10px;
   box-shadow: 3px 4px 10px 0px rgba(0, 0, 0, 0.39);
