--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <ul class="menu">
+  <ul class="menu" style="border-radius: 0">
     <li><a routerLink="/fluxo" routerLinkAtive="active">Fluxo</a></li>
     <li><a routerLink="/facing" routerLinkAtive="active">Facing</a></li>
   </ul>
