--- a/src/app/components/contagem/contagem.component.html
+++ b/src/app/components/contagem/contagem.component.html
@@ -1,24 +1,24 @@
-
 <div class="content" [class.move]="animate">
   <div class="content-timer">
-
     <div class="content-m">
-      <div class="time">{{ minutes | number:'2.0'}} <span>m</span></div>
+      <div class="time">{{ minutes | number: "2.0" }} <span>m</span></div>
       <div class="content-btn" *ngIf="show">
-        <button (click)="increment('M')"> + </button>
-        <button (click)="decrement('M')"> - </button>
+        <button (click)="increment('M')">+</button>
+        <button (click)="decrement('M')">-</button>
       </div>
     </div>
     <div class="content-s">
-      <div class="time">{{seconds | number:'2.0'}} <span>s</span></div>
+      <div class="time">{{ seconds | number: "2.0" }} <span>s</span></div>
       <div class="content-btn" *ngIf="show">
-        <button (click)="increment('S')"> + </button>
-        <button (click)="decrement('S')"> - </button>
+        <button (click)="increment('S')">+</button>
+        <button (click)="decrement('S')">-</button>
       </div>
     </div>
   </div>
   <div class="content-btn-action">
-    <button type="button" (click)="start()" [disabled]="disabled">&#9658;</button>
+    <button type="button" (click)="start()" [disabled]="disabled">
+      &#9658;
+    </button>
     <button type="button" (click)="stop()">&#9724;</button>
     <button type="button" (click)="reset()">&#8635;</button>
   </div>
