--- a/src/app/facing/facing.component.html
+++ b/src/app/facing/facing.component.html
@@ -1,11 +1,13 @@
-<h1 class="title animated tada">{{ title }}</h1>
+<div style="margin-top: 200px">
+  <h1 class="title animated tada">{{ title }}</h1>
+</div>
 
 <ul class="animated flipInX" *ngIf="mode == 'lista'">
   <p class="text-center" *ngIf="facing.length == 0">
     <small> Não tem nenhuma medição de fluxo </small>
   </p>
   <li *ngFor="let todo of facing">
-    {{ todo.id }}. {{ todo.title }}
+    {{ todo.id }}. {{ todo.title }} <br />
     <button *ngIf="!todo.done" (click)="markAsDone(todo)">
       <i class="far fa-check-circle"></i>
     </button>
@@ -13,9 +15,9 @@
       <i class="fas fa-check-circle"></i>
     </button>
     <button (click)="remove(todo)"><i class="far fa-trash-alt"></i></button>
-    <p [ngStyle]="todo.ladoA > todo.ladoB && { color: 'blue' }">
-      Total: {{ todo.total | number: "1.2-2" }}%
-    </p>
+    Espaço Total: {{ todo.totalEspaco }}
+    <p>Seu Espaço: {{ todo.espaco }}</p>
+    <p>Você tem: {{ todo.total | number: "1.2-2" }}% de facing</p>
   </li>
 </ul>
 
@@ -24,7 +26,7 @@
     <fieldset>
       <input
         type="text"
-        placeholder="Titulo do facing"
+        placeholder="Digite um Titulo"
         maxlength="60"
         formControlName="title"
       />
@@ -55,7 +57,18 @@
       <div
         style="display: flex; justify-content: space-evenly; margin-top: 10px"
       >
-        <button style="font-size: 30px" (click)="meuEspaco()">Caucular</button>
+        <button
+          style="
+            font-size: 20px;
+            border-radius: 50px;
+            background-color: rgb(49, 49, 161);
+            color: white;
+            border: none;
+          "
+          (click)="meuEspaco()"
+        >
+          Calcular facing
+        </button>
       </div>
       <div style="display: flex; justify-content: space-evenly">
         <p>Total: {{ total | number: "1.2-2" }}%</p>
