--- a/src/app/fluxo/fluxo.component.html
+++ b/src/app/fluxo/fluxo.component.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 200px">
+<div style="margin-top: 50px">
   <h1 class="title animated tada">{{ title }}</h1>
 </div>
 
@@ -24,12 +24,17 @@
   </li>
 </ul>
 
-<div id="modal" *ngIf="mode == 'add'" class="animated flipInX">
+<div
+  style="height: 48vh"
+  id="modal"
+  *ngIf="mode == 'add'"
+  class="animated flipInX"
+>
   <form [formGroup]="form">
     <fieldset>
       <input
         type="text"
-        placeholder="Titulo da Tarefa"
+        placeholder="Titulo para fluxo desejado"
         maxlength="60"
         formControlName="title"
       />
@@ -39,7 +44,9 @@
         >Este campo deve conter entre 3 e 60 caracteres<br />
       </small>
       <app-contagem></app-contagem>
-      <div style="display: flex; justify-content: space-evenly">
+      <div
+        style="display: flex; justify-content: space-evenly; margin-top: 20px"
+      >
         <p>Lado A</p>
         <p>Lado B</p>
       </div>
